# imgoverlay

./: LICENSE  README.md  meson.build  meson_options.txt  version.h.in
client/: groupconfig.cpp  groupconfig.h  main.cpp  manager.cpp  manager.h  meson.build  utils.cpp  utils.h  webview.cpp  webview.h
examples/: README.md
examples/discord/: discord.js  imgoverlayclient.conf
src/: blacklist.cpp  config.cpp  control.cpp  control.h  control_prot.h  file_utils.h  font_default.h  hook_dlsym.cpp  imgoverlay.json.in  imgoverlay.version  keybinds.h  meson.build  overlay.cpp  overlay.h  overlay_params.cpp  overlay_params.h  real_dlsym.cpp  shared_x11.cpp  shared_x11.h  string_utils.h  timing.hpp
src/gl/: gl.h  imgui_hud.cpp  imgui_hud.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  inject_egl.cpp  inject_glx.cpp
src/loaders/: loader_glx.cpp  loader_x11.cpp
src/mesa/util/: os_socket.c
subprojects/dearimgui/: imconfig.h
