option('glibcxx_asserts', type : 'boolean', value : false)
option('use_system_vulkan', type : 'feature', value : 'disabled', description: 'Use system vulkan headers instead of the provided ones')
option('imgoverlay_prefix', type : 'string', value : '', description: 'Add prefix to cross-compiled library, like "lib32-".')
option('append_libdir_imgoverlay', type : 'boolean', value : true, description: 'Append "imgoverlay" to libdir path or not.')
option('with_x11', type : 'feature', value : 'enabled')
