option('glibcxx_asserts', type : 'boolean', value : false)
option('use_system_vulkan', type : 'feature', value : 'disabled', description: 'Use system vulkan headers instead of the provided ones')
option('vulkan_registry', type : 'string', value : '/usr/share/vulkan/registry/vk.xml', description: 'Path to vulkan XML registry (with use_system_vulkan)')
option('imgoverlay_prefix', type : 'string', value : '', description: 'Add prefix to cross-compiled library, like "lib32-".')
option('append_libdir_imgoverlay', type : 'boolean', value : true, description: 'Append "imgoverlay" to libdir path or not.')
option('with_x11', type : 'feature', value : 'enabled')
option('build_client', type : 'boolean', value : true, description: 'Build client application')
